[package]
name = "concurrent_bst_map"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.test]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

[dependencies]
rand = { version = "0.8.5" }

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

